# T10

./: .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  build_install_grpc.sh
Protos/: greet.proto  greet_service.proto
Resources/: MainMenu.xml  Test.xml
Resources/GUI/: AddBuilding.xml  HUD.xml
Resources/GUI/Battle/: Aim.xml  Status.xml
Resources/Levels/Garage/: Garage.irr
Resources/Levels/Garage/GUI/: Garage.xml  TankBuy.xml
Resources/Levels/SignIn/GUI/: SignIn.xml
Resources/Levels/Testgrad/: Testgrad.irr
Resources/Models/Tanks/T-1/: Body.mtl  Gum.mtl  Hull.mtl  T-1.blend  T-1.irr
Resources/Models/Tanks/T-34/: Tank.mtl
Resources/Scripts/GameScripts/: CreateGunsEventHandler.js  main.js
Resources/Scripts/GameScripts/Cameras/: StrategyCameraAnimator.js
Resources/Scripts/GameScripts/Views/: AddBuildingView.js  (+3 more)
Resources/Scripts/typings/: CollisionPointDetectionModel.d.ts  TAMFacade.d.ts  TBaseSubSceneItem.d.ts  TBaseSubViewItem.d.ts  TButtonSubViewItem.d.ts  TCameraSubSceneItem.d.ts  TCheckboxSubViewItem.d.ts  TEvent.d.ts  TImageSubViewItem.d..ts  TLMFacade.d.ts  TListBoxSubViewItem.d.ts  TSoundItem.d.ts  TSubSceneManager.d.ts  TSubViewManager.d.ts  TUIFacade.d.ts  TVector3D.d.ts
include/: CDynamicMeshBuffer.h  EDriverTypes.h  EGUIElementTypes.h  ESceneNodeAnimatorTypes.h  ESceneNodeTypes.h  IAnimatedMesh.h  IAnimatedMeshMD3.h  IAnimatedMeshSceneNode.h  IAttributeExchangingObject.h  IAttributes.h  IBillboardSceneNode.h  IBillboardTextSceneNode.h  IBoneSceneNode.h  ICameraSceneNode.h  IColladaMeshWriter.h  ICursorControl.h  IDummyTransformationSceneNode.h  IDynamicMeshBuffer.h  IEventReceiver.h  IFileArchive.h  IFileList.h  IFileSystem.h  IFunctionsProcessingAware.h  IGPUProgrammingServices.h  IGUIButton.h  IGUICheckBox.h  IGUIColorSelectDialog.h  IGUIComboBox.h  IGUIContextMenu.h  IGUIEditBox.h  IGUIElement.h  IGUIElementFactory.h  IGUIEnvironment.h  IGUIFileOpenDialog.h  IGUIFont.h  IGUIFontBitmap.h  IGUIImage.h  IGUIImageList.h  IGUIInOutFader.h  IGUIListBox.h  (+74 more)
src/: Game.cpp  Game.h  Types.h
src/BLL/Models/: ActionResult.h  DataActionResult.h  ErrorCode.h
src/BLL/Services/: BaseService.cpp  BaseService.h  BaseService.hpp  CacheAwareMixin.cpp  CacheAwareMixin.h  CacheAwareMixin.hpp
src/DAL/ApiServices/: BaseApiService.cpp  BaseApiService.h  BaseApiService.hpp  CommunicationService.cpp  CommunicationService.h  CommunicationService.hpp  ICommunicationService.h  IWebSocketApiService.h  WebSocketApiService.cpp  WebSocketApiService.h  WebSocketApiService.hpp  WptreeValueTranslator.hpp
src/DAL/Models/: ActionResult.h  DataActionResult.h  ErrorCode.h  HeaderType.h  HttpRequest.cpp  HttpRequest.h  HttpRequest.hpp  HttpRequestType.h  HttpResponse.hpp
src/DAL/Services/: IStorageService.h  StorageService.cpp  StorageService.h  StorageService.hpp
src/Levels/: BaseLevel.cpp  BaseLevel.h  BaseLevel.hpp  GarageLevel.cpp  GarageLevel.h  ILevel.h  LevelType.h
src/Levels/Battle/: BattleLevel.cpp  BattleLevel.h  BattleLevel.hpp
src/Levels/Cameras/: GarageCameraAnimator.cpp  GarageCameraAnimator.h  GarageCameraAnimator.hpp  ICameraAnimatorDelegate.h
src/Levels/Garage/: BuyTankDialogController.cpp  BuyTankDialogController.h  BuyTankDialogController.hpp  GarageLevel.cpp  GarageLevel.h  GarageLevel.hpp  StartBattleDialogController.cpp  StartBattleDialogController.h
src/Levels/Mixins/: LoadingSplashAwareMixin.cpp  LoadingSplashAwareMixin.h  LoadingSplashAwareMixing.hpp  TankLoadingAware.hpp
src/Levels/SignIn/: SignInLevel.cpp  SignInLevel.h  SignInLevel.hpp
src/Utils/: Utils.h
src/bll/models/: ActionResult.h  ErrorCode.h
src/bll/services/: BaseService.cpp  BaseService.h
src/dal/api_services/: BaseApiService.h  CommunicationService.cpp  CommunicationService.h  ICommunicationService.h
src/dal/models/: ActionResult.h  ErrorCode.h  HttpRequest.cpp  HttpRequest.h  HttpRequestType.h  HttpResponse.h
src/levels/: BaseLevel.cpp  BaseLevel.h  LevelType.h
src/levels/garage/: GarageLevel.cpp  GarageLevel.h
(+119 files in other folders)
